--- a/chat_grpc/build.gradle
+++ b/chat_grpc/build.gradle
@@ -11,10 +11,7 @@ repositories {
     mavenCentral()
 }
 
-
-application {
-    mainClassName = project.hasProperty("mainClass") ? getProperty("mainClass") : "NULL"
-}
+mainClassName = 'edu.grpcchat.Main'
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
